logs/BlossomV_0.5.log
>>> 'Pkg.add("BlossomV")' log
INFO: Cloning cache of BlossomV from https://github.com/mlewe/BlossomV.jl.git
INFO: Installing BlossomV v0.0.1
INFO: Building BlossomV

WARNING: deprecated syntax "[a=>b, ...]" at /home/vagrant/.julia/v0.5/BlossomV/deps/build.jl:28.
Use "Dict(a=>b, ...)" instead.
INFO: Attempting to Create directory /home/vagrant/.julia/v0.5/BlossomV/deps/downloads
INFO: Downloading file http://pub.ist.ac.at/~vnk/software/blossom5-v2.04.src.tar.gz
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0     0    0     0    0     0      0      0 --:--:--  0:00:01 --:--:--     0100 47427  100 47427    0     0  24607      0  0:00:01  0:00:01 --:--:-- 24599
INFO: Done downloading file http://pub.ist.ac.at/~vnk/software/blossom5-v2.04.src.tar.gz
WARNING: readbytes is deprecated, use read instead.
 in depwarn(::ASCIIString, ::Symbol) at ./deprecated.jl:64
 in readbytes(::IOStream, ::Vararg{IOStream}) at ./deprecated.jl:30
 [inlined code] from /home/vagrant/.julia/v0.5/SHA/src/SHA.jl:30
 in (::BinDeps.##56#57{UTF8String,ASCIIString})(::IOStream) at /home/vagrant/.julia/v0.5/BinDeps/src/dependencies.jl:1031
 in open(::BinDeps.##56#57{UTF8String,ASCIIString}, ::UTF8String) at ./iostream.jl:114
 [inlined code] from /home/vagrant/.julia/v0.5/BinDeps/src/dependencies.jl:1030
 in (::BinDeps.##17#18{BinDeps.ChecksumValidator})() at /home/vagrant/.julia/v0.5/BinDeps/src/BinDeps.jl:338
 in run(::BinDeps.##17#18{BinDeps.ChecksumValidator}) at /home/vagrant/.julia/v0.5/BinDeps/src/BinDeps.jl:436
 in run(::BinDeps.SynchronousStepCollection) at /home/vagrant/.julia/v0.5/BinDeps/src/BinDeps.jl:479 (repeats 2 times)
 [inlined code] from ./array.jl:195
 in satisfy!(::BinDeps.LibraryDependency, ::Array{DataType,1}) at /home/vagrant/.julia/v0.5/BinDeps/src/dependencies.jl:798
 in satisfy!(::BinDeps.LibraryDependency) at /home/vagrant/.julia/v0.5/BinDeps/src/dependencies.jl:776
 in anonymous at /home/vagrant/.julia/v0.5/BinDeps/src/dependencies.jl:831
 in include(::ASCIIString) at ./boot.jl:264
 in include_from_node1(::ASCIIString) at ./loading.jl:417
 in eval(::Module, ::Any) at ./boot.jl:267
 [inlined code] from ./sysimg.jl:14
 in evalfile(::ASCIIString, ::Array{UTF8String,1}) at ./loading.jl:433 (repeats 2 times)
 in cd(::##2#4, ::ASCIIString) at ./file.jl:48
 in (::##1#3)(::IOStream) at ./none:13
 in open(::##1#3, ::ASCIIString, ::ASCIIString) at ./iostream.jl:114
 in eval(::Module, ::Any) at ./boot.jl:267
 [inlined code] from ./sysimg.jl:14
 in process_options(::Base.JLOptions) at ./client.jl:239
 in _start() at ./client.jl:318
while loading /home/vagrant/.julia/v0.5/BlossomV/deps/build.jl, in expression starting on line 28
INFO: Attempting to Create directory /home/vagrant/.julia/v0.5/BlossomV/deps/src
INFO: Attempting to Create directory /home/vagrant/.julia/v0.5/BlossomV/deps
INFO: Directory /home/vagrant/.julia/v0.5/BlossomV/deps already created
INFO: Changing Directory to /home/vagrant/.julia/v0.5/BlossomV/deps/src/blossom5-v2.04.src
INFO: Attempting to Create directory /home/vagrant/.julia/v0.5/BlossomV/deps/usr/lib
patching file Makefile
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  example.cpp -c -o example.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  interface.cpp -c -o interface.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  misc.cpp -c -o misc.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMduals.cpp -c -o PMduals.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMexpand.cpp -c -o PMexpand.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMinit.cpp -c -o PMinit.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMinterface.cpp -c -o PMinterface.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMmain.cpp -c -o PMmain.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMrepair.cpp -c -o PMrepair.o
interface.cpp: In function ‘matching* matching_construct(int32_t, int32_t)’:
interface.cpp:25:14: error: ‘make_unique’ is not a member of ‘std’
     result = std::make_unique<matching>(node_num, edge_num_max).release();
              ^
interface.cpp:25:39: error: expected primary-expression before ‘>’ token
     result = std::make_unique<matching>(node_num, edge_num_max).release();
                                       ^
interface.cpp:25:65: error: request for member ‘release’ in ‘(0, edge_num_max)’, which is of non-class type ‘int32_t {aka int}’
     result = std::make_unique<matching>(node_num, edge_num_max).release();
                                                                 ^
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMshrink.cpp -c -o PMshrink.o
make: *** [interface.o] Error 1
make: *** Waiting for unfinished jobs....
==============================[ ERROR: BlossomV ]===============================

LoadError: failed process: Process(setenv(`make -j8 all`,Union{ASCIIString,UTF8String}["PYTHON=","PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/","PWD=/vagrant/0.5AL","SHELL=/bin/bash","SSH_CONNECTION=10.0.2.2 53473 10.0.2.15 22","MAIL=/var/mail/vagrant","LANG=en_US.UTF-8","SHLVL=3","LOGNAME=vagrant","XDG_RUNTIME_DIR=/run/user/1000","XDG_SESSION_ID=3","OLDPWD=/home/vagrant","SSH_CLIENT=10.0.2.2 53473 22","_=/usr/bin/timeout","USER=vagrant","TERM=vt100","HOME=/home/vagrant","OPENBLAS_MAIN_FREE=1","JAVA_HOME=/usr/lib/jvm/java-7-oracle"]), ProcessExited(2)) [2]
while loading /home/vagrant/.julia/v0.5/BlossomV/deps/build.jl, in expression starting on line 28

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: BlossomV had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.5
 - build the package(s) and all dependencies with `Pkg.build("BlossomV")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated

>>> 'Pkg.test("BlossomV")' log
Julia Version 0.5.0-dev+2918
Commit 1eacbbb (2016-02-28 16:56 UTC)
Platform Info:
  System: Linux (x86_64-unknown-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.7.1
INFO: Testing BlossomV
ERROR: LoadError: LoadError: BlossomV not properly installed. Please run Pkg.build("BlossomV")
 in error(::ASCIIString) at ./error.jl:21
 in include(::ASCIIString) at ./boot.jl:264
 in include_from_node1(::ASCIIString) at ./loading.jl:417
 in eval(::Module, ::Any) at ./boot.jl:267
 [inlined code] from ./sysimg.jl:14
 in require(::Symbol) at ./loading.jl:348
 in include(::ASCIIString) at ./boot.jl:264
 in include_from_node1(::UTF8String) at ./loading.jl:417
 in process_options(::Base.JLOptions) at ./client.jl:262
 in _start() at ./client.jl:318
while loading /home/vagrant/.julia/v0.5/BlossomV/src/BlossomV.jl, in expression starting on line 6
while loading /home/vagrant/.julia/v0.5/BlossomV/test/runtests.jl, in expression starting on line 1
==============================[ ERROR: BlossomV ]===============================

failed process: Process(`/home/vagrant/julia/bin/julia -Cx86-64 -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --check-bounds=yes --code-coverage=none --color=no /home/vagrant/.julia/v0.5/BlossomV/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
ERROR: Base.Pkg.PkgError("BlossomV had test errors")
 in #test#55(::Bool, ::Any, ::Array{AbstractString,1}) at ./pkg/entry.jl:671
 [inlined code] from ./boot.jl:331
 in (::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}})() at ./pkg/dir.jl:31
 in cd(::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}}, ::UTF8String) at ./file.jl:48
 in #cd#1(::Array{Any,1}, ::Any, ::Any, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1}}) at ./pkg/dir.jl:31
 [inlined code] from ./boot.jl:331
 in #test#4(::Bool, ::Any, ::ASCIIString, ::Vararg{ASCIIString}) at ./pkg.jl:228
 in eval(::Module, ::Any) at ./boot.jl:267
 [inlined code] from ./sysimg.jl:14
 in process_options(::Base.JLOptions) at ./client.jl:239
 in _start() at ./client.jl:318

>>> End of log
